# anna

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  fabfile.py  lokal  manage.py  pyproject.toml  requirements.txt
application/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
application/migrations/: 0001_initial.py  0002_alter_media_modified_alter_module_modified_and_more.py  0003_remove_media_prev_remove_module_prev_and_more.py  0004_alter_media_module_alter_module_training.py  0005_alter_training_description.py  0006_media_length.py  0007_alter_media_length.py  0008_alter_media_length.py  0009_alter_media_length.py  0010_alter_module_next.py  0011_alter_media_next.py  0012_alter_module_options_module_ordering.py  0013_alter_device_options.py  0014_training_stick_to_the_plan.py  0015_appointment.py  0016_alter_appointment_options_alter_training_options_and_more.py  0017_alter_media_description_alter_module_description.py  0018_product.py  0019_product_free.py  0020_alter_product_courses.py  0021_alter_media_options_media_ordering.py  0022_media_attachment.py  0023_alter_media_attachment.py  (+13 more)
my_secrets/: definitions.py
settings/: andy.py  common.py  mika.py  stage.py
templates/: all_media.html  all_modules.html  all_trainings.html  appointments.html  data_security.html  flatpage.html  forum.html  login.html  login.pug  profile.html  signup.html  single_media.html  single_media_advertising.html  single_media_advertising_content.html  single_media_content.html
users/: apps.py  models.py  views.py
webapp/: anna.nginx  anna.sh  live-worker.json  settings.py  stage.py  storages.py  tasks.py  test-anna.nginx  test-anna.sh  test-worker.sh  urls.py
(+54 files in other folders)
