[tool.poetry]
name = "anna"
version = "0.1.0"
description = ""
authors = ["mika <mika.griebsch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
Django = "^4.0.4"
django-bootstrap5 = "^21.3"
django-jazzmin = "^2.5.0"
django-quill-editor = "^0.1.40"
django-storages = "^1.12.3"
django-user-agents = "^0.4.0"
Pillow = "^9.1.1"
python-dateutil = "^2.8.2"
python-decouple = "^3.6"
boto3 = "^1.23.4"
html2text = "^2020.1.16"
gunicorn = "^20.1.0"
django-secrets = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
